tests/error_tests/illegal_require_and_extend.tau
module m{
    require "test1.tau";
}
extend m{
    public func foo() -> int{
        return 0;
    }
}

func main() -> int {
    import m;
    return m::foo();
}
